--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Parchment
-author: pro-panda
-subtitle: The life of a frustrated engineer
+title: hxxdev
+author: hxx
+subtitle: I am hxx.
 
 url: "https://hxxdev.github.io"
 baseurl: ""
