--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -7,6 +7,7 @@ on:
       - .gitignore
       - README.md
       - LICENSE
+      - tutorial
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
