--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "https://hxxdev.github.io"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
@@ -181,7 +181,7 @@ defaults:
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /posts/:title/
+      permalink: /posts/:title/index.html
   - scope:
       path: _drafts
     values:
