--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Asia/Seoul
 
 title: hxxdev # the main title
 
-tagline: Hello, I am hxx. I develop and cook. # it will display as the subtitle
+tagline: Hello, I am hxx. I develop and cook. I like learning new stuff. # it will display as the subtitle
 
-description: >- # used by seo meta and the atom feed
-  An archive of cooking and development.
+description: An archive of cooking and development. # used by seo meta and the atom feed
+
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
