--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -8,6 +8,7 @@ on:
       - README.md
       - LICENSE
       - tutorial
+      - env.sh
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
