--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -9,6 +9,7 @@ on:
       - LICENSE
       - tutorial
       - env.sh
+      - .notags
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
